[gd_scene load_steps=30 format=3 uid="uid://b1elrwy2sxgcm"]

[ext_resource type="Texture2D" uid="uid://bk21vgt5kkpu4" path="res://Assets/grass.jpg" id="1_ajqmg"]
[ext_resource type="Script" path="res://world.gd" id="1_utxau"]
[ext_resource type="Script" path="res://camera.gd" id="3_6djqi"]
[ext_resource type="AudioStream" uid="uid://bhuvjnffws2yp" path="res://Assets/music1.mp3" id="4_gh3gp"]
[ext_resource type="PackedScene" uid="uid://dfseeeu0n8esr" path="res://Assets/decoration/nature/hills_A.gltf" id="7_b5up1"]
[ext_resource type="PackedScene" uid="uid://c8nbbls2uxmt2" path="res://Assets/decoration/nature/hills_A_trees.gltf" id="8_h3xis"]
[ext_resource type="PackedScene" uid="uid://3fgyk0qvyc8m" path="res://Assets/decoration/nature/hills_B.gltf" id="9_y5sui"]
[ext_resource type="PackedScene" uid="uid://cmbql32t6mkh3" path="res://Assets/decoration/nature/mountain_A.gltf" id="10_505u7"]
[ext_resource type="PackedScene" uid="uid://65a8resqer55" path="res://Assets/decoration/nature/mountain_A_grass.gltf" id="11_g2oft"]
[ext_resource type="PackedScene" uid="uid://c2ri4i6cyn6fi" path="res://Assets/decoration/nature/mountain_A_grass_trees.gltf" id="12_pd7ds"]
[ext_resource type="PackedScene" uid="uid://si4dsbrslw0u" path="res://Assets/decoration/nature/mountain_B.gltf" id="13_ot2in"]
[ext_resource type="PackedScene" uid="uid://bjjtc5yo0qirp" path="res://Assets/decoration/nature/trees_B_large.gltf" id="14_ywmwk"]
[ext_resource type="PackedScene" uid="uid://d3ivrwgia3p45" path="res://Assets/decoration/nature/trees_B_cut.gltf" id="15_k1ywv"]
[ext_resource type="PackedScene" uid="uid://bk68osj0pjp58" path="res://Assets/decoration/nature/trees_A_medium.gltf" id="16_yjcmi"]
[ext_resource type="PackedScene" uid="uid://dg73xelxp4psn" path="res://Assets/decoration/nature/waterplant_C.gltf" id="17_l6he4"]
[ext_resource type="PackedScene" uid="uid://7ods2inoy6l1" path="res://Assets/decoration/nature/waterplant_B.gltf" id="18_siade"]
[ext_resource type="PackedScene" uid="uid://bbau506iwpl3w" path="res://Assets/decoration/nature/waterplant_A.gltf" id="19_1xt7x"]
[ext_resource type="AudioStream" uid="uid://ong1qvwthwb2" path="res://Assets/yes.mp3" id="23_xbvgu"]
[ext_resource type="PackedScene" uid="uid://bgbtg6kf7fldx" path="res://UI/multiple_selection.tscn" id="27_0c2f8"]
[ext_resource type="PackedScene" uid="uid://disu4eq6m5gql" path="res://UI/battle_ui.tscn" id="28_2kjaq"]
[ext_resource type="PackedScene" uid="uid://b1dm5bv2b4sjp" path="res://UI/change_scene_ui.tscn" id="29_n678l"]
[ext_resource type="PackedScene" uid="uid://3ltqbe5v6rob" path="res://UI/map_ui.tscn" id="29_w34bp"]
[ext_resource type="AudioStream" uid="uid://yk4vp27q13xj" path="res://Assets/no.mp3" id="31_u13r1"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_j5x58"]
sky_horizon_color = Color(0.18188, 0.703927, 0.96015, 1)
sky_curve = 0.621159
ground_horizon_color = Color(0.15814, 0.728251, 0.842854, 1)

[sub_resource type="Sky" id="Sky_p6rs4"]
sky_material = SubResource("ProceduralSkyMaterial_j5x58")

[sub_resource type="Environment" id="Environment_l8vx7"]
background_mode = 2
sky = SubResource("Sky_p6rs4")
fog_light_energy = 0.0
volumetric_fog_density = 0.02

[sub_resource type="PlaneMesh" id="PlaneMesh_i2g6q"]
size = Vector2(10000, 10000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_75eu4"]
albedo_texture = ExtResource("1_ajqmg")
uv1_scale = Vector3(800, 800, 800)

[sub_resource type="NavigationMesh" id="NavigationMesh_rxv06"]
vertices = PackedVector3Array(-499, 0, -499, -499, 0, 499, 499, 0, 499, 499, 0, -499)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
agent_radius = 1.0

[node name="World" type="Node3D"]
script = ExtResource("1_utxau")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_l8vx7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_energy = 1.5

[node name="Terrain" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Terrain"]
mesh = SubResource("PlaneMesh_i2g6q")
surface_material_override/0 = SubResource("StandardMaterial3D_75eu4")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Terrain"]
visible = false
navigation_mesh = SubResource("NavigationMesh_rxv06")

[node name="CSGBox3D" type="CSGBox3D" parent="Terrain/NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
visible = false
layers = 0
use_collision = true
size = Vector3(1000, 0, 1000)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, -0.34202, 0.939693, 0, 0.939692, 0.34202, -1, 1.49502e-08, -4.10753e-08, 100, 30, 0)
fov = 40.0
script = ExtResource("3_6djqi")

[node name="Troops" type="Node3D" parent="."]

[node name="Decorations" type="Node3D" parent="."]
process_mode = 4
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.62939e-06, 0, 7.62939e-06)

[node name="hills_A2" parent="Decorations" instance=ExtResource("7_b5up1")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, -96.626, 0.25, -20.7888)

[node name="hills_A_trees2" parent="Decorations" instance=ExtResource("8_h3xis")]
transform = Transform3D(30, 0, 0, 0, 30, 0, 0, 0, 30, -102.115, 0.25, -95.7749)

[node name="hills_B2" parent="Decorations" instance=ExtResource("9_y5sui")]
transform = Transform3D(-40, 0, -3.49691e-06, 0, 40, 0, 3.49691e-06, 0, -40, -60.7414, 0.25, -159.552)

[node name="mountain_A2" parent="Decorations" instance=ExtResource("10_505u7")]
transform = Transform3D(40, 0, 0, 0, 40, 0, 0, 0, 40, -137.912, 0.25, 19.6013)

[node name="mountain_A_grass2" parent="Decorations" instance=ExtResource("11_g2oft")]
transform = Transform3D(-1.74846e-06, 0, 40, 0, 40, 0, -40, 0, -1.74846e-06, -157.752, 1.63737, -43.2717)

[node name="mountain_A_grass_trees2" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(-40, 0, -3.49691e-06, 0, 40, 0, 3.49691e-06, 0, -40, -95.8192, 0.25, 144.918)

[node name="mountain_B2" parent="Decorations" instance=ExtResource("13_ot2in")]
transform = Transform3D(-1.74846e-06, 0, 40, 0, 40, 0, -40, 0, -1.74846e-06, -109.557, 0.25, 77.7187)

[node name="trees_B_cut2" parent="Decorations" instance=ExtResource("15_k1ywv")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, -50.5464, 0.25, -112.236)

[node name="trees_A_medium2" parent="Decorations" instance=ExtResource("16_yjcmi")]
transform = Transform3D(30, 0, 0, 0, 30, 0, 0, 0, 30, -40.8007, 0.249969, 124.582)

[node name="mountain_A3" parent="Decorations" instance=ExtResource("10_505u7")]
transform = Transform3D(-21.492, 0, 33.7357, 0, 40, 0, -33.7357, 0, -21.492, -118.49, 0.25, -151.908)

[node name="mountain_A_grass3" parent="Decorations" instance=ExtResource("11_g2oft")]
transform = Transform3D(-33.7357, 0, -21.492, 0, 40, 0, 21.492, 0, -33.7357, -160.856, 1.63737, -101.393)

[node name="mountain_A_grass_trees3" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(21.492, 0, -33.7357, 0, 40, 0, 33.7357, 0, 21.492, -35.4153, 0.25, -254.742)

[node name="mountain_B3" parent="Decorations" instance=ExtResource("13_ot2in")]
transform = Transform3D(-33.7357, 0, -21.492, 0, 40, 0, 21.492, 0, -33.7357, -84.7092, 0.25, -207.049)

[node name="mountain_A4" parent="Decorations" instance=ExtResource("10_505u7")]
transform = Transform3D(1.58155, 0, 39.9687, 0, 40, 0, -39.9687, 0, 1.58155, 14.2138, 0.249969, 188.516)

[node name="mountain_A_grass4" parent="Decorations" instance=ExtResource("11_g2oft")]
transform = Transform3D(-39.9687, 0, 1.58155, 0, 40, 0, -1.58155, 0, -39.9687, -49.3945, 1.63734, 205.855)

[node name="mountain_A_grass_trees4" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(-1.58155, 0, -39.9687, 0, 40, 0, 39.9687, 0, -1.58155, 141.102, 0.25, 150.831)

[node name="mountain_B4" parent="Decorations" instance=ExtResource("13_ot2in")]
transform = Transform3D(-39.9687, 0, 1.58155, 0, 40, 0, -1.58155, 0, -39.9687, 73.4069, 0.249969, 162.481)

[node name="mountain_A_grass_trees5" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(29.2665, 0, -27.2667, 0, 40, 0, 27.2667, 0, 29.2665, 189.765, 0.25, -119.681)

[node name="trees_B_large3" parent="Decorations" instance=ExtResource("14_ywmwk")]
transform = Transform3D(-14.6333, 0, 13.6333, 0, 20, 0, -13.6333, 0, -14.6333, 131.186, 0.25, -112.058)

[node name="trees_A_medium3" parent="Decorations" instance=ExtResource("16_yjcmi")]
transform = Transform3D(-14.6333, 0, 13.6333, 0, 20, 0, -13.6333, 0, -14.6333, 132.682, 0.249969, -149.49)

[node name="mountain_A5" parent="Decorations" instance=ExtResource("10_505u7")]
transform = Transform3D(-28.4025, 0, -28.1656, 0, 40, 0, 28.1656, 0, -28.4025, 138.978, 0.249969, -226.586)

[node name="mountain_A_grass5" parent="Decorations" instance=ExtResource("11_g2oft")]
transform = Transform3D(28.1656, 0, -28.4025, 0, 40, 0, 28.4025, 0, 28.1656, 197.337, 1.63734, -195.913)

[node name="mountain_A_grass_trees6" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(28.4025, 0, 28.1656, 0, 40, 0, -28.1656, 0, 28.4025, 20.4498, 0.25, -285.509)

[node name="mountain_B5" parent="Decorations" instance=ExtResource("13_ot2in")]
transform = Transform3D(28.1656, 0, -28.4025, 0, 40, 0, 28.4025, 0, 28.1656, 77.9209, 0.249969, -247.887)

[node name="mountain_A_grass_trees7" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(-14.3438, 0, -37.3397, 0, 40, 0, 37.3397, 0, -14.3438, 161.232, 0.25, 75.768)

[node name="trees_A_medium4" parent="Decorations" instance=ExtResource("16_yjcmi")]
transform = Transform3D(7.17192, 0, 18.6699, 0, 20, 0, -18.6699, 0, 7.17192, 167.531, 0.249969, 11.6786)

[node name="mountain_A6" parent="Decorations" instance=ExtResource("10_505u7")]
transform = Transform3D(-36.7434, 0, 15.809, 0, 40, 0, -15.809, 0, -36.7434, 241.388, 0.249969, -11.3129)

[node name="mountain_A_grass6" parent="Decorations" instance=ExtResource("11_g2oft")]
transform = Transform3D(-15.809, 0, -36.7434, 0, 40, 0, 36.7434, 0, -15.809, 234.764, 1.63734, 54.2826)

[node name="mountain_A_grass_trees8" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(36.7434, 0, -15.809, 0, 40, 0, 15.809, 0, 36.7434, 251.71, 0.25, -143.276)

[node name="mountain_B6" parent="Decorations" instance=ExtResource("13_ot2in")]
transform = Transform3D(-15.809, 0, -36.7434, 0, 40, 0, 36.7434, 0, -15.809, 238.31, 0.249969, -75.9054)

[node name="mountain_A_grass_trees9" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(-5.25334, 0, 59.7696, 0, 60, 0, -59.7696, 0, -5.25334, -223.525, 0.25, -135.227)

[node name="trees_B_large5" parent="Decorations" instance=ExtResource("14_ywmwk")]
transform = Transform3D(5.25334, 0, -59.7696, 0, 60, 0, 59.7696, 0, 5.25334, -174.893, 0.25, -101.692)

[node name="trees_A_medium5" parent="Decorations" instance=ExtResource("16_yjcmi")]
transform = Transform3D(5.25334, 0, -59.7696, 0, 60, 0, 59.7696, 0, 5.25334, -201.053, 0.249969, -74.877)

[node name="mountain_A7" parent="Decorations" instance=ExtResource("10_505u7")]
transform = Transform3D(59.9306, 0, 2.88601, 0, 60, 0, -2.88601, 0, 59.9306, -257.322, 0.249969, -21.7992)

[node name="mountain_A_grass7" parent="Decorations" instance=ExtResource("11_g2oft")]
transform = Transform3D(-2.88602, 0, 59.9306, 0, 60, 0, -59.9306, 0, -2.88602, -280.163, 1.63734, -83.6451)

[node name="mountain_A_grass_trees10" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(-59.9306, 0, -2.88601, 0, 60, 0, 2.88601, 0, -59.9306, -208.671, 0.25, 101.302)

[node name="mountain_B7" parent="Decorations" instance=ExtResource("13_ot2in")]
transform = Transform3D(-2.88602, 0, 59.9306, 0, 60, 0, -59.9306, 0, -2.88602, -226.204, 0.249969, 34.8871)

[node name="waterplant_C2" parent="Decorations" instance=ExtResource("17_l6he4")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, -39.887, 0.25, -10.7114)

[node name="waterplant_B2" parent="Decorations" instance=ExtResource("18_siade")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, -42.8458, 0.250001, -18.0401)

[node name="waterplant_A2" parent="Decorations" instance=ExtResource("19_1xt7x")]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, -56.208, 0.25, -8.51587)

[node name="mountain_A_grass_trees11" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(44.63, 0, 40.1019, 0, 60, 0, -40.1019, 0, 44.63, 7.92175, 0.25, -382.597)

[node name="mountain_A_grass_trees16" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(44.63, 0, 40.1019, 0, 60, 0, -40.1019, 0, 44.63, 75.9644, 0.25, -338.168)

[node name="trees_A_medium6" parent="Decorations" instance=ExtResource("16_yjcmi")]
transform = Transform3D(-44.63, 0, -40.1019, 0, 60, 0, 40.1019, 0, -44.63, -26.829, 0.249969, -328.38)

[node name="mountain_A8" parent="Decorations" instance=ExtResource("10_505u7")]
transform = Transform3D(38.3059, 0, -46.1807, 0, 60, 0, 46.1807, 0, 38.3059, -103.064, 0.249969, -341.485)

[node name="mountain_A_grass8" parent="Decorations" instance=ExtResource("11_g2oft")]
transform = Transform3D(46.1807, 0, 38.3059, 0, 60, 0, -38.3059, 0, 46.1807, -67.3386, 1.63734, -396.895)

[node name="mountain_A_grass_trees12" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(-38.3059, 0, 46.1807, 0, 60, 0, -46.1807, 0, -38.3059, -172.26, 0.25, -228.646)

[node name="mountain_B8" parent="Decorations" instance=ExtResource("13_ot2in")]
transform = Transform3D(46.1807, 0, 38.3059, 0, 60, 0, -38.3059, 0, 46.1807, -129.693, 0.249969, -282.556)

[node name="mountain_A_grass_trees13" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(-48.1953, 0, 35.7382, 0, 60, 0, -35.7382, 0, -48.1953, -184.13, 0.25, 182.387)

[node name="trees_A_medium7" parent="Decorations" instance=ExtResource("16_yjcmi")]
transform = Transform3D(48.1953, 0, -35.7382, 0, 60, 0, 35.7382, 0, 48.1953, -124.073, 0.249969, 205.63)

[node name="mountain_A9" parent="Decorations" instance=ExtResource("10_505u7")]
transform = Transform3D(37.6158, 0, 46.7445, 0, 60, 0, -46.7445, 0, 37.6158, -121.714, 0.249969, 282.947)

[node name="mountain_A_grass9" parent="Decorations" instance=ExtResource("11_g2oft")]
transform = Transform3D(-46.7445, 0, 37.6158, 0, 60, 0, -37.6158, 0, -46.7445, -183.135, 1.63734, 258.987)

[node name="mountain_A_grass_trees14" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(-37.6158, 0, -46.7445, 0, 60, 0, 46.7445, 0, -37.6158, 39.7808, 0.25, 250.162)

[node name="mountain_A_grass_trees15" parent="Decorations" instance=ExtResource("12_pd7ds")]
transform = Transform3D(-37.6158, 0, -46.7445, 0, 60, 0, 46.7445, 0, -37.6158, 113.494, 0.25, 231.152)

[node name="mountain_B9" parent="Decorations" instance=ExtResource("13_ot2in")]
transform = Transform3D(-46.7445, 0, 37.6158, 0, 60, 0, -37.6158, 0, -46.7445, -58.6594, 0.249969, 297.291)

[node name="trees_A_medium8" parent="Decorations" instance=ExtResource("16_yjcmi")]
transform = Transform3D(16.6102, 0, 22.5411, 0, 28, 0, -22.5411, 0, 16.6102, -54.4535, 0.249969, 77.8095)

[node name="trees_A_medium9" parent="Decorations" instance=ExtResource("16_yjcmi")]
transform = Transform3D(-6.16523, 0, 27.3128, 0, 28, 0, -27.3128, 0, -6.16523, -72.3885, 0.249969, 30.9384)

[node name="trees_A_medium10" parent="Decorations" instance=ExtResource("16_yjcmi")]
transform = Transform3D(-6.16523, 0, 27.3128, 0, 28, 0, -27.3128, 0, -6.16523, 1.97976, 0.249969, 119.351)

[node name="trees_A_medium11" parent="Decorations" instance=ExtResource("16_yjcmi")]
transform = Transform3D(-26.1546, 0, -9.99688, 0, 28, 0, 9.99688, 0, -26.1546, 44.4104, 0.249969, 117.427)

[node name="trees_A_medium12" parent="Decorations" instance=ExtResource("16_yjcmi")]
transform = Transform3D(-7.46855, 0, -26.9856, 0, 28, 0, 26.9856, 0, -7.46855, 93.7655, 0.249969, 109.405)

[node name="MultipleSelection" parent="." instance=ExtResource("27_0c2f8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="BattleUI" parent="." instance=ExtResource("28_2kjaq")]
troops_count = 126
enemies_count = 126

[node name="ChangeSceneUI" parent="." instance=ExtResource("29_n678l")]
next_scene = ExtResource("29_w34bp")

[node name="BattleFinishTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="MusicPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_gh3gp")
attenuation_model = 3
volume_db = 16.0
max_distance = 4096.0

[node name="BattleLost" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("31_u13r1")
volume_db = 15.0

[node name="BattleWon" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("23_xbvgu")
volume_db = 15.0

[connection signal="timeout" from="BattleFinishTimer" to="." method="_on_battle_finish_timer_timeout"]
